hard-gists/5780127/run.log
=== Docker Run Log for 5780127 ===
Started at: Mi 29. Okt 15:57:31 CET 2025

[2025-10-29 15:57:32] START: Running container for 5780127
[2025-10-29 15:57:32] SUCCESS: Container db5f382385851305050a09baf49ff7a4b5e90c2fc83f12997f0f4e9d3af0d016 started for 5780127
=== Container logs for 5780127 ===
  File "/snippet.py", line 70
    print '%12s' % (test_pic,)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5780127 ===
[2025-10-29 15:57:34] INFO: Container db5f382385851305050a09baf49ff7a4b5e90c2fc83f12997f0f4e9d3af0d016 has stopped
